[project]
name = "nonebot-plugin-yoyogame"
version = "0.1.4"
description = "一个基于Nonebot开发的悠悠小游戏"
authors = [
    {name = "ChenXu233", email = "Woyerpa@outlook.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "terminaltables>=3.1.10",
    "nonebot2>=2.3.3",
    "nonebot-adapter-onebot>=2.4.4",
]
requires-python = ">=3.10"

readme = "README.md"
license = {text = "GPL"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
